2011-02-02  Adam Barth  <abarth@webkit.org>

        Reviewed by Daniel Bates.

        Teach XSSFilter about JavaScript URLs
        https://bugs.webkit.org/show_bug.cgi?id=53635

        This patch teaches the XSSFilter to check for JavaScript URLs in
        attribute values.  If this approach has too many false positives, we
        can restrict which attribute names we examine.

        Fixes these tests:
            http/tests/security/xssAuditor/anchor-url-dom-write-location-javascript-URL.html
            http/tests/security/xssAuditor/dom-write-location-javascript-URL.html
            http/tests/security/xssAuditor/iframe-javascript-url*

        * html/parser/XSSFilter.cpp:
        (WebCore::HTMLNames::containsJavaScriptURL):
        (WebCore::XSSFilter::filterTokenInitial):
        (WebCore::XSSFilter::eraseDangerousAttributesIfInjected):
        * html/parser/XSSFilter.h:

2011-02-02  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig, even though this is just a...

        ...build fix.

        * platform/mac/ScrollAnimatorMac.mm:
        (WebCore::ScrollAnimatorMac::~ScrollAnimatorMac):

2011-02-02  Mark Rowe  <mrowe@apple.com>

        Reviewed by Beth Dakin.

        <rdar://problem/8952012> Crash on launch inside scrollbar code.

        We need to ensure that we remove ourselves as the delegates of objects when we're going
        away as failing to do this can lead to crashes if the lifetime of the other objects
        is longer than ours.

        * platform/mac/ScrollAnimatorMac.mm:
        (WebCore::ScrollAnimatorMac::~ScrollAnimatorMac):
        * platform/mac/ScrollbarThemeMac.mm:
        (WebCore::ScrollbarThemeMac::unregisterScrollbar):

2011-02-02  Beth Dakin  <bdakin@apple.com>

        Build fix.

        * WebCore.exp.in:

2011-02-02  Patrick Gansterer  <paroga@webkit.org>

        Unreviewed WinCE build fix for r77397.

        * page/wince/FrameWinCE.cpp:
        (WebCore::computePageRectsForFrame):
