@@ -955,6 +955,10 @@ __ZNK7WebCore10PluginData16supportsMimeTypeERKN3WTF6StringE
 __ZNK7WebCore10RenderText16linesBoundingBoxEv
 __ZNK7WebCore10RenderText9firstRunXEv
 __ZNK7WebCore10RenderText9firstRunYEv
+__ZNK7WebCore10RenderView6docTopEv
+__ZNK7WebCore10RenderView7docLeftEv
+__ZNK7WebCore10RenderView8docRightEv
+__ZNK7WebCore10RenderView9docBottomEv
 __ZNK7WebCore10ScrollView12contentsSizeEv
 __ZNK7WebCore10ScrollView12documentViewEv
 __ZNK7WebCore10ScrollView14scrollbarModesERNS_13ScrollbarModeES2_
@@ -1005,6 +1009,7 @@ __ZNK7WebCore12PrintContext8pageRectEm
 __ZNK7WebCore12PrintContext9pageCountEv
 __ZNK7WebCore12RenderObject14enclosingLayerEv
 __ZNK7WebCore12RenderObject15localToAbsoluteENS_10FloatPointEbb
+__ZNK7WebCore12RenderObject4viewEv
 __ZNK7WebCore12RenderObject7childAtEj
 __ZNK7WebCore12RenderWidget14windowClipRectEv
 __ZNK7WebCore12SharedBuffer11getSomeDataERPKcj
@@ -1187,6 +1192,7 @@ __ZNK7WebCore7IntRect8containsERKS0_
 __ZNK7WebCore7IntRectcv6CGRectEv
 __ZNK7WebCore7IntRectcv7_NSRectEv
 __ZNK7WebCore7IntSizecv7_NSSizeEv
+__ZNK7WebCore8Document10renderViewEv
 __ZNK7WebCore8Document11completeURLERKN3WTF6StringE
 __ZNK7WebCore8Document13axObjectCacheEv
 __ZNK7WebCore8Document13nodesFromRectEiijjjjb
@@ -1222,12 +1228,6 @@ __ZTVN7WebCore12ChromeClientE
 __ZTVN7WebCore17FileChooserClientE
 __ZTVN7WebCore17FrameLoaderClientE
 __ZTVN7WebCore25HistoryPropertyListWriterE
-__ZNK7WebCore12RenderObject4viewEv
-__ZNK7WebCore10RenderView7docLeftEv
-__ZNK7WebCore10RenderView6docTopEv
-__ZNK7WebCore10RenderView8docRightEv
-__ZNK7WebCore10RenderView9docBottomEv
-__ZNK7WebCore8Document10renderViewEv
 _filenameByFixingIllegalCharacters
 _hasCaseInsensitiveSubstring
 _hasCaseInsensitiveSuffix
@@ -1320,13 +1320,11 @@ _wkScrollbarPainterKnobAlpha
 _wkScrollbarPainterPaint
 _wkScrollbarPainterSetDelegate
 _wkScrollbarPainterSetOverlayState
-_wkScrollbarPainterTrackAlpha
 _wkScrollbarPainterUsesOverlayScrollers
 _wkScrollbarThickness
 _wkSetPainterForPainterController
 _wkSetScrollbarPainterControllerStyle
 _wkSetScrollbarPainterKnobAlpha
-_wkSetScrollbarPainterTrackAlpha
 _wkVerticalScrollbarPainterForController
 _wkWillEndLiveResize
 _wkWillStartLiveResize
