@@ -1,3 +1,13 @@
+2011-02-02  Mark Rowe  <mrowe@apple.com>
+
+        Build fix.
+
+        * WebCore.exp.in: Remove some bogus symbols from the .exp.in file.
+        * platform/mac/ScrollbarThemeMac.mm:
+        (WebCore::ScrollbarThemeMac::unregisterScrollbar): Look the object
+        up in the HashMap rather than relying on a local variable that doesn't
+        exist.
+
 2011-02-02  Adam Barth  <abarth@webkit.org>
 
         Reviewed by Daniel Bates.
